# thesis

./: .gdriveignore  .gitignore  Makefile  sync.sh
docs/: Makefile
docs/misc/: variances.md
docs/src/: references.bib  thesis.tex
docs/src/chapters/: abstract-en.tex  abstract-id.tex  approval.tex  chapter-1.tex  chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  cover.tex  forewords.tex  statement.tex
docs/src/config/: hypenation-id.tex  (+1 more)
misc/: failure.md  variances.md
perwalian-api/: main.py  pyproject.toml
perwalian-api/features/: environment.py  m1.feature.bak  m2.feature.bak  mahasiswa.feature
perwalian-api/features/steps/: mahasiswa.py
perwalian-api/perwalian_api/: main.py  model.py  store.py
perwalian-api/tests/: test_perwalian_api.py
src/: __latexindent_temp.tex  references.bib  thesis.tex
src/chapters/: approval.tex  chapter-1.tex  chapter-2.tex  chapter-3.tex  cover.tex  statement.tex
src/config/: if-itb-thesis.sty
timun/: .gitignore  notes.md  pyproject.toml
timun-py.old/: pyproject.toml
timun-py.old/tests/: test_parse.py  test_timun.py
timun-py.old/timun/: parse.py
timun-py/tests/: test_timun.py
timun-py/timun/: parse.py
timun/features/: tutorial.feature
timun/features/steps/: calc.py  tutorial.py
timun/tests/: test_parse.py  test_parser.py
timun/timun/: __init__.py  __main__.py  expander.py  file_loader.py  model.py  parser.py  runner.py  scrambler.py  step.py  step_loader.py
timun/timun/parser/: __init__.py  combinator.py  decorator.py  feature.py  scenario.py  step.py  table.py  variable.py
(+1 files in other folders)
