[tool.poetry]
name = "perwalian-api"
version = "0.1.0"
description = ""
authors = ["Ridho Pratama <ridho.pratama@go-jek.com>"]

[tool.poetry.dependencies]
python = "^3.8"
timun = {path = "../timun"}
uvicorn = "^0.11.8"
fastapi = "^0.61.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
