[tool.poetry]
name = "timun"
version = "0.1.0"
description = ""
authors = ["Ridho Pratama <p.ridho@yahoo.co.id>"]

[tool.poetry.dependencies]
python = "^3.8"
parse = "^1.15.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.782"

[tool.poetry.scripts]
timun = 'timun.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
